--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -65,21 +65,21 @@
     - [9.4.4. Socket Buffers:](#944-socket-buffers)
   - [9.5. Static User Tracing: 用户态静态追踪](#95-static-user-tracing-用户态静态追踪)
   - [9.6. Dynamic Tracing: 动态追踪](#96-dynamic-tracing-动态追踪)
-    - [Kernel: tcp_sending(): 某个内核函数](#kernel-tcp_sending-某个内核函数)
-    - [Kernel: tcp_sendmsg() with size: 获取内核变量](#kernel-tcp_sendmsg-with-size-获取内核变量)
-    - [Kernel: tcp_sendmsg() line number and local variable: 内核函数某一行跟踪点和局部变量](#kernel-tcp_sendmsg-line-number-and-local-variable-内核函数某一行跟踪点和局部变量)
-    - [User: malloc(): 用户态函数](#user-malloc-用户态函数)
-    - [User: malloc() with size:](#user-malloc-with-size)
+    - [9.6.1. Kernel: tcp_sending(): 某个内核函数](#961-kernel-tcp_sending-某个内核函数)
+    - [9.6.2. Kernel: tcp_sendmsg() with size: 获取内核变量](#962-kernel-tcp_sendmsg-with-size-获取内核变量)
+    - [9.6.3. Kernel: tcp_sendmsg() line number and local variable: 内核函数某一行跟踪点和局部变量](#963-kernel-tcp_sendmsg-line-number-and-local-variable-内核函数某一行跟踪点和局部变量)
+    - [9.6.4. User: malloc(): 用户态函数](#964-user-malloc-用户态函数)
+    - [9.6.5. User: malloc() with size:](#965-user-malloc-with-size)
   - [9.7. Scheduler Analysis: 调度器分析](#97-scheduler-analysis-调度器分析)
-    - [perf sched record: 数据采样](#perf-sched-record-数据采样)
-    - [perf script --header: 查看数据文件中的事件](#perf-script-header-查看数据文件中的事件)
-    - [对数据文件进行分析](#对数据文件进行分析)
-      - [perf sched latency: 调度延迟分析](#perf-sched-latency-调度延迟分析)
-      - [perf sched map:](#perf-sched-map)
+    - [9.7.1. perf sched record: 数据采样](#971-perf-sched-record-数据采样)
+    - [9.7.2. perf script --header: 查看数据文件中的事件](#972-perf-script-header-查看数据文件中的事件)
+    - [9.7.3. 对数据文件进行分析](#973-对数据文件进行分析)
+      - [9.7.3.1. perf sched latency: 调度延迟分析](#9731-perf-sched-latency-调度延迟分析)
+      - [9.7.3.2. perf sched map:](#9732-perf-sched-map)
   - [9.8. eBPF](#98-ebpf)
     - [9.8.1. Prerequisites: 前提条件](#981-prerequisites-前提条件)
-    - [kmem_cache_alloc from Example](#kmem_cache_alloc-from-example)
-    - [9.8.2. 事件限定符](#982-事件限定符)
+    - [9.8.2. kmem_cache_alloc from Example](#982-kmem_cache_alloc-from-example)
+    - [9.8.3. 事件限定符](#983-事件限定符)
   - [9.9. 性能事件的属性](#99-性能事件的属性)
     - [9.9.1. PMI中断和PEBS中断](#991-pmi中断和pebs中断)
     - [9.9.2. 性能事件的精度级别](#992-性能事件的精度级别)
@@ -1965,7 +1965,7 @@ address should be. The 'p' modifier can be specified multiple times:
 
 对于用户态, 配置`CONFIG_UPROBES=y`和`CONFIG_UPROBE_EVENTS=y`, 从而开启用户态动态追踪功能.
 
-### Kernel: tcp_sending(): 某个内核函数
+### 9.6.1. Kernel: tcp_sending(): 某个内核函数
 
 ```
 # ./perf probe --add tcp_sendmsg
@@ -2033,7 +2033,7 @@ You can now use it in all perf tools, such as:
 
 使用了以后, 可以通过`perf probe --del`删掉它.
 
-### Kernel: tcp_sendmsg() with size: 获取内核变量
+### 9.6.2. Kernel: tcp_sendmsg() with size: 获取内核变量
 
 如果kernel有debuginfo(`CONFIG_DEBUG_INFO=y`), 就可以**从函数中获取内核变量**. 下面是一个例子, 检查`size_t`(整型).
 
@@ -2098,7 +2098,7 @@ You can now use it in all perf tools, such as:
 
 `size`按照十六进制显示.
 
-### Kernel: tcp_sendmsg() line number and local variable: 内核函数某一行跟踪点和局部变量
+### 9.6.3. Kernel: tcp_sendmsg() line number and local variable: 内核函数某一行跟踪点和局部变量
 
 使用debuginfo，perf可以为**某内核函数中某一行**创建跟踪点。
 
@@ -2179,7 +2179,7 @@ You can now use it in all perf tools, such as:
 
 这真是太神奇了。 请记住，还可以使用`--filter`包括内核内过滤，以**仅匹配**所需的数据。
 
-### User: malloc(): 用户态函数
+### 9.6.4. User: malloc(): 用户态函数
 
 尽管这是一个有趣的示例，但我想马上说出`malloc()`调用非常频繁，因此您将需要考虑像这样跟踪调用的开销。
 
@@ -2236,14 +2236,14 @@ report分析:
 
 显示调用`malloc()`最多的是`apt-config`.
 
-### User: malloc() with size: 
+### 9.6.5. User: malloc() with size:
 
 
 ## 9.7. Scheduler Analysis: 调度器分析
 
 `perf sched`子命令用来分析内核的CPU调度行为. 可以通过它来**识别**和**量化**调度延迟的问题。
 
-### perf sched record: 数据采样
+### 9.7.1. perf sched record: 数据采样
 
 它会检测**调度事件**并将其转储到`perf.data`文件中，以供以后分析。 例如：
 
@@ -2255,7 +2255,7 @@ report分析:
 
 一秒钟有1.9 MB，包括13502个样本. **大小**和**速率**与**工作负载**和**CPU数量**有关。 已将其写入文件系统的方式进行了优化：**仅唤醒一次**即可读取事件缓冲区并将其写入磁盘，这大大降低了开销。也就是说，检测所有调度程序事件并将事件数据写入文件系统仍存在大量开销。
 
-### perf script --header: 查看数据文件中的事件
+### 9.7.2. perf script --header: 查看数据文件中的事件
 
 查看`perf.data`中的事件：
 
@@ -2267,7 +2267,7 @@ perf script --header
 
 如果开销是一个问题，则可以使用[eBPF/bcc](http://www.brendangregg.com/ebpf.html#bcc)工具，包括runqlat和runqlen，它们使用调度程序事件的内核摘要，从而进一步减少开销。 `perf sched`转储**所有事件**的一个优点是**不仅限于summary摘要**, 可以**自定义方式分析**那些记录的事件，直到您了解问题为止，而**无需第二次捕获**它。
 
-### 对数据文件进行分析
+### 9.7.3. 对数据文件进行分析
 
 trace文件能够用很多方式进行分析, 可以通过help信息看到摘要:
 
@@ -2277,7 +2277,7 @@ perf sched -h
 
 ![2020-12-27-19-11-28.png](./images/2020-12-27-19-11-28.png)
 
-#### perf sched latency: 调度延迟分析
+#### 9.7.3.1. perf sched latency: 调度延迟分析
 
 `perf sched latency`将**按task**概述**调度延迟**，包括**平均**和**最大延迟**
 
@@ -2312,7 +2312,7 @@ perf sched -h
 
 从**wakeup**(991962.918368，**以秒为单位**)到**上下文切换**(991962.948070)的时间为`29.702`毫秒。 **此过程**在原始事件中被列为`“sh”`（shell），但不久之后执行程序`“cat”`，因此在`perf sched latency`输出中显示为“cat”。
 
-#### perf sched map:
+#### 9.7.3.2. perf sched map:
 
 `perf sched map`显示了所有CPU和上下文切换事件, 各列表示每个CPU在做什么以及何时进行。 这是您在调度程序分析GUI中看到的可视化数据（包括perf时间图，布局旋转了90度）。 输出示例：
 
@@ -2331,7 +2331,7 @@ eBPF当前受到perf的限制，很难使用。 一直在变好。 通过bcc Pyt
 
 还有clang（例如，yum install clang）。
 
-### kmem_cache_alloc from Example
+### 9.8.2. kmem_cache_alloc from Example
 
 该程序仅在其调用函数与在内核上下文中过滤的指定范围匹配时才跟踪内核`kmem_cache_alloc()`函数。 您可以想象这样做是为了提高效率：不必跟踪所有分配（这会非常频繁并且会增加大量开销），而是仅对一系列感兴趣的内核调用函数（例如内核模块）进行过滤。 我将松散地匹配tcp函数作为示例，这些函数在内存中的以下地址处：
 
@@ -2441,7 +2441,7 @@ bpf: builtin compilation failed: -95, try external compiler
 
 
 
-### 9.8.2. 事件限定符
+### 9.8.3. 事件限定符
 
 事件有多种表示方式，最简单的是它的字符串表示。引用事件时，可以指定限定符：
 
