--- Auto-Git Commit ---

--- a/Virtualization/Tools/测试虚拟机构建.md
+++ b/Virtualization/Tools/测试虚拟机构建.md
@@ -96,6 +96,9 @@ wget http://XXXXX/t
 curl -O http://XXXXX/t
 ```
 
+
+curl -F 'data=@/data/tmp/kallsyms' http://9.60.214.29/upload
+
 5. 可以使用minicom或者kermit??
 
 https://www.jianshu.com/p/d07aaea2e16f
