--- Auto-Git Commit ---

--- a/Virtualization/Tools/测试虚拟机构建.md
+++ b/Virtualization/Tools/测试虚拟机构建.md
@@ -99,6 +99,10 @@ curl -O http://XXXXX/t
 
 curl -F 'data=@/data/tmp/kallsyms' http://9.60.214.29/upload
 
+
+curl http://9.60.214.29/upload -F "file=@/data/tmp/kallsyms" -H "token: 222" -v
+
+
 5. 可以使用minicom或者kermit??
 
 https://www.jianshu.com/p/d07aaea2e16f
