--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/13. 虚拟中断的评估与delivery.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/13. 虚拟中断的评估与delivery.md
@@ -57,7 +57,7 @@ VMM 需要通过 posted-interrupt notification vector 字段来发送一个**通
 
 # 虚拟中断的评估
 
-处理器在执行虚拟中断（virtual-interrupt) delivery 之前，需要评估是否允许组织生成拟中断的 pending 信息。一旦生成了虚拟中断的 pending 信息，处理器将 deliver 这个虚拟中断执行。
+处理器在执行虚拟中断（virtual-interrupt) **delivery 之前**，需要评估**是否允许组织生成**虚拟中断的 pending 信息。一旦生成了虚拟中断的 pending 信息，处理器将 deliver 这个虚拟中断执行。
 
  do_evaluate_virtual_interrupt O
 
