--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/13. 虚拟中断的评估与delivery.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/13. 虚拟中断的评估与delivery.md
@@ -57,30 +57,28 @@ VMM 需要通过 posted-interrupt notification vector 字段来发送一个**通
 
 # 虚拟中断的评估
 
-处理器在执行虚拟中断（virtual-interrupt) **delivery 之前**，需要评估**是否允许组织生成**虚拟中断的 pending 信息。一旦生成了虚拟中断的 pending 信息，处理器将 deliver 这个虚拟中断执行。
+处理器在执行虚拟中断（virtual-interrupt) **delivery 之前**，需要评估**是否允许组织生成**虚拟中断的 **pending** 信息。一旦生成了虚拟中断的 pending 信息，处理器将 deliver 这个虚拟中断执行。
 
- do_evaluate_virtual_interrupt O
+```cpp
+do_evaluate_virtual_interrupt()
+{
+    if"interrupt-window exiting" == 0){
+        /* 评估 virtual-Interrupt 是否允许组织 */
+        if(RVI[7:4] > VPPR[7:4]){
+            /* 通过评估，组织一个 pending virtual-interrupt */
+            do_recognize_virtual_interrupt();
 
- if"interrupt-window exiting"=0)
+            /* 检查 virtual- interrupt 是否允许 delivery */
+            if(eflags.IF == 1 && "blocking by STI" == 0
+                && "blocking by MOV-SS" == 0){
+                    do_deliver_virtual_interrupt();   /* 执行 deliver 虚拟中断 */
+                }
+        }
+    }
+}
+```
 
-评估 virtual-Interrupt 是否允许组织
-
- if  (RVI [7: 4]> VPPR [7: 41)
-
-通过评估，组织一个 pending virtual-interrupt
-/
-
-检查 virtual- interrupt 是否允许 delivery
-
- f  (eflags. IF = 1 &&"blocking by STI"==0
-
- &&"blocking by MOV-SS
-
-do_ deliver_ virtual_ interrupt;/执行 deliver 虚拟中断/
-
-如上面的伪码所示，当 prmary processor- based VM-execution control 字段的 Interrupt
-
- window exiting”位为 0 时，才允许组织虚拟中断的 pending 信息。当“interrupt-window
+如上面的伪码所示，当 `prmary processor-based VM-execution control` 字段的 "`interrupt-window exiting`”位为 0 时，才允许组织虚拟中断的 pending 信息。当“interrupt-window
 
  exiting”为 1 时，在打开中断窗口后会直接引发 VM-exit（参见 3.5.2.1 及 4.15.7 节）。
 
