--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/13. 虚拟中断的评估与delivery.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/13. 虚拟中断的评估与delivery.md
@@ -80,7 +80,9 @@ do_evaluate_virtual_interrupt()
 
 如上面的伪码所示，当 `prmary processor-based VM-execution control` 字段的 "`interrupt-window exiting`”位为 **0** 时，**才允许组织虚拟中断的 pending 信息**。当“`interrupt-window exiting`”为 1 时，在**打开中断窗口**后会直接引发 VM-exit（参见 3.5.2.1 及 4.15.7 节）。
 
-处理器接着评估**虛拟中断优先级别**。当 `RVI[7:4]` 大于 `VPPR[7:4]` 时，处理器组织个虚拟中断 pending 在**下一条指令边界**上（当在 Vm-entry 时则在 guest 第 1 条指令边界上）。处理器接着检查虚拟中断是否被阻塞，当不被阻塞时通过 guest-DT 进行 deliver 执行
+处理器接着评估**虛拟中断优先级别**。当 `RVI[7:4]` 大于 `VPPR[7:4]` 时，处理器组织个虚拟中断 pending 在**下一条指令边界**上（当在 Vm-entry 时则在 guest 第 1 条指令边界上）。
+
+处理器接着**检查虚拟中断是否被阻塞**，当不被阻塞时通过 guest-DT 进行 deliver 执行.
 
 1. 虚拟中断的阻塞
 
