--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/13. 虚拟中断的评估与delivery.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/13. 虚拟中断的评估与delivery.md
@@ -86,11 +86,11 @@ do_evaluate_virtual_interrupt()
 
 1. 虚拟中断的阻塞
 
-虚拟中断（virtual- interrupt）具有与外部中断（external-interrupt）一样的阻塞属性。虚拟中断是否允许 deliver 取决于处理器当前的 interruptibility 以及 activity 状态（参见 4.16 与 4.17 节描述）。
+虚拟中断（virtual-interrupt）具有与外部中断（external-interrupt）一样的**阻塞属性**。虚拟中断是否允许 deliver **取决**于处理器当前的 **interruptibility** 以及 **activity** 状态（参见 4.16 与 4.17 节描述）。
 
- interruptibility（可中断性）：当 F=1, 并且不存在“blocking by STI“以及  blocking by MOV-SS”阻塞状态时，虚拟中断才允许 deliver。
+* **interruptibility（可中断性）**：当 `IF = 1`, 并且**不存在** "blocking by STI" 以及 "blocking by MOV-SS" 阻塞状态时，虚拟中断才允许 deliver。
 
- activity（活动性）：当处理器不在 shutdown 以及 wait-for-SIPI 状态时，虚拟中断才允许 deliver
+* **activity（活动性）**：当处理器**不在** `shutdown` 以及 `wait-for-SIPI` 状态时，虚拟中断才允许 deliver
 
 因此，虚拟中断在处理器的 HLT 状态下不会被阻塞。虚拟中断的 delivery 可以唤醒
 
