--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/13. 虚拟中断的评估与delivery.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/13. 虚拟中断的评估与delivery.md
@@ -8,6 +8,8 @@
     - [RVI示例](#rvi示例)
   - [发送通知 IPI](#发送通知-ipi)
 - [虚拟中断的评估](#虚拟中断的评估)
+  - [虚拟中断的阻塞](#虚拟中断的阻塞)
+  - [虚拟中断的优先级](#虚拟中断的优先级)
 
 <!-- /code_chunk_output -->
 
@@ -84,29 +86,27 @@ do_evaluate_virtual_interrupt()
 
 处理器接着**检查虚拟中断是否被阻塞**，当不被阻塞时通过 guest-DT 进行 deliver 执行.
 
-1. 虚拟中断的阻塞
+## 虚拟中断的阻塞
 
 虚拟中断（virtual-interrupt）具有与外部中断（external-interrupt）一样的**阻塞属性**。虚拟中断是否允许 deliver **取决**于处理器当前的 **interruptibility** 以及 **activity** 状态（参见 4.16 与 4.17 节描述）。
 
 * **interruptibility（可中断性）**：当 `IF = 1`, 并且**不存在** "blocking by STI" 以及 "blocking by MOV-SS" 阻塞状态时，虚拟中断才允许 deliver。
 
-* **activity（活动性）**：当处理器**不在** `shutdown` 以及 `wait-for-SIPI` 状态时，虚拟中断才允许 deliver
+* **activity（活动性）**：当处理器**不在** `shutdown` 以及 `wait-for-SIPI` 状态时，虚拟中断**才允许 deliver**.
 
-因此，虚拟中断在处理器的 HLT 状态下不会被阻塞。虚拟中断的 delivery 可以唤醒
+因此，虚拟中断在处理器的 **HLT** 状态下**不会被阻塞**。虚拟中断的 delivery 可以**唤醒处理器**的 **HLT** 状态进入 **active** 状态。
 
-处理器的 HLT 状态进入 active 状态。
-
-2. 虚拟中断的优先级
+## 虚拟中断的优先级
 
 虚拟中断的优先级别与“interrupt-window exiting“一致（参见 4.15 与 4.15.7 节）。可是，在“interrupt-window exiting”为 1 时，虚拟中断不会被组织 pending。
 
-在前面 4.15 节的描述里，虚拟中断的优先级别低于“NM- window exiting“、“NM  exiting”、NMI 以及其他更高优先级的事件。虚拟中断的优先级等同于“Interrupt- window  exiting，高于“external- interrupt exiting”和 external- interrupt（外部中断请求）
+在前面 4.15 节的描述里，**虚拟中断的优先级**别低于 "`NMI-window exiting`"、“`NMI exiting`”、`NMI` 以及**其他更高优先级的事件**。**虚拟中断的优先级**等同于“`interrupt-window exiting`，**高于**“`external-interrupt exiting`”和 `external-interrupt`（外部中断请求）
 
-注意：虚拟中断与外部中断是不同的，虚拟中断只能通过 TPR 虚拟化、EOI 虚拟化、self-P 虚拟化、Vm-entry 操作以及 posted-interrupt processing 机制产生，而外部中断通过中断控制器发送请求或者接收到 IPI 消息产生。
+注意：**虚拟中断**与**外部中断**是**不同**的，
+* 虚拟中断**只能**通过 **TPR 虚拟化**、**EOI 虚拟化**、**self-IPI 虚拟化**、`Vm-entry` 操作以及 **posted-interrupt processing** 机制产生，
+* 而外部中断通过**中断控制器**发送请求或者接收到 **IPI 消息**产生。
 
-但是，在 posted-interrupt（通告中断）的处理过程中，虚拟中断的评估及 delivery 操
-
-作是在处理器检查“external- Interrupt exiting”之后发生，也就是在 guest I 收到 notification
+但是，在 posted-interrupt（通告中断）的处理过程中，虚拟中断的评估及 delivery 操作是在处理器检查“external- Interrupt exiting”之后发生，也就是在 guest I 收到 notification
 
  vector（通知向量）后。
 
