--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/13. 虚拟中断的评估与delivery.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/13. 虚拟中断的评估与delivery.md
@@ -106,7 +106,7 @@ do_evaluate_virtual_interrupt()
 * 虚拟中断**只能**通过 **TPR 虚拟化**、**EOI 虚拟化**、**self-IPI 虚拟化**、`Vm-entry` 操作以及 **posted-interrupt processing** 机制产生，
 * 而外部中断通过**中断控制器**发送请求或者接收到 **IPI 消息**产生。
 
-但是，在 posted-interrupt（通告中断）的处理过程中，虚拟中断的评估及 delivery 操作是在处理器检查“external- Interrupt exiting”之后发生，也就是在 guest I 收到 notification
+但是，在 posted-interrupt（通告中断）的处理过程中，虚拟中断的评估及 delivery 操作是在处理器检查“external-interrupt exiting”之后发生，也就是在 guest I 收到 notification
 
  vector（通知向量）后。
 
