--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/13. 虚拟中断的评估与delivery.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/13. 虚拟中断的评估与delivery.md
@@ -3,18 +3,18 @@
 
 <!-- code_chunk_output -->
 
-- [引发虚拟中断评估及delivery的途径](#引发虚拟中断评估及delivery的途径)
-  - [注入虚拟中断](#注入虚拟中断)
-    - [RVI示例](#rvi示例)
-  - [发送通知 IPI](#发送通知-ipi)
-- [虚拟中断的评估](#虚拟中断的评估)
-  - [虚拟中断的阻塞](#虚拟中断的阻塞)
-  - [虚拟中断的优先级](#虚拟中断的优先级)
-- [虚拟中断的 delivery](#虚拟中断的-delivery)
+- [1. 引发虚拟中断评估及delivery的途径](#1-引发虚拟中断评估及delivery的途径)
+  - [1.1. 注入虚拟中断](#11-注入虚拟中断)
+    - [1.1.1. RVI示例](#111-rvi示例)
+  - [1.2. 发送通知 IPI](#12-发送通知-ipi)
+- [2. 虚拟中断的评估](#2-虚拟中断的评估)
+  - [2.1. 虚拟中断的阻塞](#21-虚拟中断的阻塞)
+  - [2.2. 虚拟中断的优先级](#22-虚拟中断的优先级)
+- [3. 虚拟中断的 delivery](#3-虚拟中断的-delivery)
 
 <!-- /code_chunk_output -->
 
-# 引发虚拟中断评估及delivery的途径
+# 1. 引发虚拟中断评估及delivery的途径
 
 能**引发虚拟中断的评估及 delivery** 操作的前提是 “`virtual-interrupt delivery`” 位为 **1** 并且 “`external-interrupt exiting`” 位也必须为 **1**（参见 4.4.1,1 节）。
 
@@ -36,7 +36,7 @@
 
 除了上述的途径外，**没有其他的途径**可以引发 **virtual-Interrupt 的评估及 delivery 操作**，**即使改变了 RVI 或 VPPR 的值**。
 
-## 注入虚拟中断
+## 1.1. 注入虚拟中断
 
 * **VMM** 可以通过 `VM-entry interruption information` 字段来注入一个**外部中断**或**软件中断**给 guest 处理（参见 4.12 节）。
 
@@ -44,7 +44,7 @@
 
 * **在 guest 端里**，guest **只能**通过写 `VICR[31:0]`或者 **IA32_X2APIC_SELF_IPI** 寄存器执行 Self-IPI 虚拟化操作来**主动产生虚拟中断**
 
-### RVI示例
+### 1.1.1. RVI示例
 
 ```
 SetVmcsField GUEST_INTERRUPT_STATUS, 60h    ;注入虚拟中断 60h 
@@ -52,13 +52,13 @@ SetVmcsField GUEST_INTERRUPT_STATUS, 60h    ;注入虚拟中断 60h
 
 上面的代码示例中，VMM 设置 `guest-interrupt status` 字段的值为 60H, 从而**注入一个虚拟中断** **60H** 给 guest 处理。在完成 VM-entry 操作后（包括注入事件 delivery），处理器接着执行 **PPR 虚拟化**，然后执行 **virtual-interrupt 的评估与 delivery** 操作（参见 4.9)
 
-## 发送通知 IPI
+## 1.2. 发送通知 IPI
 
 在 host 端里，VMM 除了可以**注人虚拟中断**外，也可以利用 `posted-Interrupt processing` 机制来实现**虚拟中断的 delivery**。
 
 VMM 需要通过 posted-interrupt notification vector 字段来发送一个**通知 IPI 中断**给 guest, guest 收到通知 IPI 后接着处理 VMM 设置的 **posted-interrupt**（通告中断）
 
-# 虚拟中断的评估
+# 2. 虚拟中断的评估
 
 处理器在执行虚拟中断（virtual-interrupt) **delivery 之前**，需要评估**是否允许组织生成**虚拟中断的 **pending** 信息。一旦生成了虚拟中断的 pending 信息，处理器将 deliver 这个虚拟中断执行。
 
@@ -87,7 +87,7 @@ do_evaluate_virtual_interrupt()
 
 处理器接着**检查虚拟中断是否被阻塞**，当不被阻塞时通过 guest-DT 进行 deliver 执行.
 
-## 虚拟中断的阻塞
+## 2.1. 虚拟中断的阻塞
 
 虚拟中断（virtual-interrupt）具有与外部中断（external-interrupt）一样的**阻塞属性**。虚拟中断是否允许 deliver **取决**于处理器当前的 **interruptibility** 以及 **activity** 状态（参见 4.16 与 4.17 节描述）。
 
@@ -97,7 +97,7 @@ do_evaluate_virtual_interrupt()
 
 因此，虚拟中断在处理器的 **HLT** 状态下**不会被阻塞**。虚拟中断的 delivery 可以**唤醒处理器**的 **HLT** 状态进入 **active** 状态。
 
-## 虚拟中断的优先级
+## 2.2. 虚拟中断的优先级
 
 虚拟中断的优先级别与“interrupt-window exiting“一致（参见 4.15 与 4.15.7 节）。可是，在“interrupt-window exiting”为 1 时，虚拟中断不会被组织 pending。
 
@@ -109,36 +109,29 @@ do_evaluate_virtual_interrupt()
 
 但是，在 **posted-interrupt**（通告中断）的处理过程中，**虚拟中断的评估及 delivery** 操作是在处理器检查“external-interrupt exiting”**之后**发生，也就是在 guest 收到 notification vector（通知向量）后。
 
-# 虚拟中断的 delivery
+# 3. 虚拟中断的 delivery
 
 虚拟中断通过 guest-IDT 进行 delivery 时，处理器将**更新 virtual-APC 的状态**，包括 **VIRR**、**VISR**、**RVI** 及 **SVI** 状态。如下面的代码所示。
 
 ```
- do_deliver_virtual_interrupt
+do_deliver_virtual_interrupt()
+{
+    /* 更新 virtual-APTC 状态 */
+    vector = RVI;       /* 将要 deliver 的中断请求 */
+    VISR[vector] = 1;   /* 置 VISR 的 In-serivce 位 */
+    SVI = vector:       /* 指示正在 In-service 的中断例程 */
+    VPPR = vector & OXF0; /* 更新 VPPR 为当前 In-service 的中断例程的优先级 */
+    VIRR[vector] = 0;   /* 清 VIR 的中断请求位 */
 
-/
+    /* 更新 RV 状态值，指向下一个将要 deliver 的虚拟中断 */
+    if (VIRR != 0){
+        RVI = get_highest_index_of_bitset(VIRR);
+    }else{
+        RVI = 0;
+    }
 
-更新 virtual-APTC 状态
-
- vector RVI 将要 deliver 的中断请求
-
- SR [vector] = 1 /置 VISR 的 n- serivce 位
-
- SVI vector: /指示正在 n- service 的中断例程/
-
- VPPR vector & OXF /更新 VPPR 为当前 n- service 的中断例程的优先级/
-
- VIRR [vector] 0 清 VIR 的中断请求位/
-
-更新 RV 状态值，指向下一个将要 deliver 的虚拟中断
-
- f CVIRR I-0)
-
- RVI -gethighest_index_of_bitset (VIRR)
-
- RVI O
-
-do_ delivery_of_ quest_idt ( vector); /通过 quest. -IDT 进行 delivery/
+    do_delivery_of_quest_idt(vector); /* 通过 guest-IDT 进行 delivery */
+}
 ```
 
 处理器执行下面的虚拟中断 delivery 处理。
@@ -147,20 +140,14 @@ do_ delivery_of_ quest_idt ( vector); /通过 quest. -IDT 进行 delivery/
 
     * 设置 **VISR** 的 `In-service` 位：读取 RVI 值，指示将要 deliver 的虚拟中断向量号。根据这个向量号在 VSR 对应位置位，指示将要在 `In-service`（进入服务）的**虚拟中断**。注意：在 Self-ipi 虚拟化里更新 RVI 值，在 EOI 虚拟化里更新 SVI 值。
 
-    * 更新 SV 值：SV 被赋予将要 deliver 的虚拟中断向量号，指示正在运行的虚拟中断。
+    * 更新 SVI 值：SV 被赋予将要 deliver 的虚拟中断向量号，指示正在运行的虚拟中断。
 
-更新 VPPR 状态：根据 deliver 的虚拟中断向量号更新 VPPR 值（vector&
+    * 更新 VPPR 状态：根据 deliver 的虚拟中断向量号更新 **VPPR** 值 (vector & FOH)。指示当前处理器的中断优先级别。
 
-FOH）。指示当前处理器的中断优先级别。
+    * 更新 VIRR 状态：处理器从 VIRR 的**虚拟中断请求列表**中取出中断请求后需要清对应的请求位，表明已经响应虚拟中断。
 
-更新 VIRR 状态：处理器从 VIR 的虚拟中断请求列表中取出中断请求后需要
+    * 更新 RVI 值：RV 指向下一条将要 deliver 的虚拟中断。假如 VIRR 的请求列表还存在另一个虚拟中断，则需要从 VIRR 取出**优先级别最高**的虚拟中断请求赋予 RVI。假如 VIRR 请求列表为空，则 RVI 为 0 值。
 
-清对应的请求位，表明已经响应虚拟中断。
-
-更新 RVI 值：RV 指向下一条将要 deliver 的虚拟中断。假如 VIRR 的请求列表还存在另一个虚拟中断，则需要从 VIRR 取出优先级别最高的虚拟中断请求赋
-
-予 RVI。假如 VIRR 请求列表为空，则 RVI 为 0 值。
-
-处理器根据虚拟中断向量号通过 guest-IDT 进行 deliver 执行。
+* 处理器根据虚拟中断向量号通过 guest-IDT 进行 deliver 执行。
 
 当然，在虚拟中断的 delivery 期间可能会发生异常而产生 Vm-exit, VMM 需要根据情况进行相应的处理（参见 7.1 节）。
