--- a/Virtualization/Tools/测试虚拟机构建.md
+++ b/Virtualization/Tools/测试虚拟机构建.md
@@ -63,6 +63,16 @@ netstat -a | grep tftp
 
 显示结果为`udp 0 0 *:tftp *:*`表明服务已经开启，就表明tftp配置成功了。
 
+注: 虚拟机和host都要将firewalld和selinux关闭
+
+```
+systemctl stop firewalld
+systemctl disable firewalld
+
+# /etc/selinux/config
+SELINUX=disabled
+```
+
 在虚拟机中:
 
 使用tftp
